# MedCore_APP

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/modules/: calculadoras.py  hc.py  home.py
app/storage/data/historias_clinicas/: asdasd.md
app/storage/data/pearls/: guia_neonatal.md
src/: main.py
src/assets/guias/: guia medicamentos pediatria.md
src/assets/hc/: julian.md
src/modules/: calculadoras.py  hc.py  home.py  info.py  navigation.py  paraclinicos.py
storage/data/historias_clinicas/: asddas.md
