[project]
name = "medcore"
version = "0.0.2"
description = "Application for calculating, searching, and accessing medical tools for your medical practice and study. "
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Julian Andres Almario Loaiza", email = "julian-andres-almario@hotmail.com" }
]
dependencies = [
  "flet==0.28.2"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "julianalmario"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "MedCore"

# company name to display in about app dialogs
company = "Julian Almario"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Julian Almario"

[tool.flet.app]
path = "app"

# Android settings
[tool.flet.splash]
android = false

[tool.flet.android.signing]
key_store = "path/to/key/key.jks"
key_alias = "upload"

[tool.flet.android]
min_sdk_version = 21

#-----------------------

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.2",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.2"}